# funkyactors

./: CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: funkyactors-config.cmake.in
include/funkyactors/: actor.hpp  effect_handler.hpp  input_source.hpp  processor_interface.hpp  publisher.hpp  subscription.hpp  topic.hpp
include/funkyactors/timer/: asio_timer_core.hpp  timer.hpp  timer_core.hpp  timer_factory.hpp
src/timer/: asio_timer_core.cpp
tests/: test_example.cpp
